--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -4,7 +4,7 @@
     z-index: 1000;
     transform: translateX(100%);
     inset: 0 0 0 0;
-    background: hsl(var(--color-default--reverse));
+    background: hsl(var(--color-background));
     list-style: none;
     padding: min(40rem, 15vh) 2rem;
     margin: 0;
@@ -39,7 +39,7 @@
   }
   .mobile-nav-toggle {
     border-radius: 50%;
-    background-color: hsl(var(--color-default));
+    background-color: hsl(var(--color-foreground));
     border: none;
     display: block;
     position: fixed;
